Realtime gateway
